--- a/index.html
+++ b/index.html
@@ -6,27 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Phillips</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0652b226de.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="#" class="logo">Robert Phillips</a>
-        <a href="#about" class="navbar__navlink">About</a>
-        <a href="#projects" class="navbar__navlink">Projects</a>
-        <a href="#contact" class="navbar__navlink">Contact</a>
+    <nav id="mainNavbar" class="navbar">
+        <div>
+            <a href="#" class="logo">Robert Phillips</a>
+        </div>
+        <ul class="navList">
+            <li class="listItem"><a href="#about">About</a></li>
+            <li class="listItem"><a href="#projects">Projects</a></li>
+            <li class="listItem"><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
-<header class="header" id=top>
+
+    <!-- <header class="header" id=top>
         <div class="intro">
             <h1 class="intro__heading">Interstellar Software</h1>
             <h2 class="intro__subheading">For Only $99 Space Dollars!</h2>
             <i class="fa-solid fa-shuttle-space"></i>
             <i class="fa-solid fa-angles-down"></i>
         </div>
-    </header>
+    </header> -->
 </body>
 
 </html>
