--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Phillips</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0652b226de.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <nav id="mainNavbar" class="navbar">
-        <div>
+        <div class="div-logo">
             <a href="#" class="logo">Robert Phillips</a>
         </div>
-        <ul class="navList">
+        <ul class="navList" id="navi-list">
             <li class="listItem"><a href="#about">About</a></li>
             <li class="listItem"><a href="#projects">Projects</a></li>
             <li class="listItem"><a href="#contact">Contact</a></li>
         </ul>
+        <div class="menu" id="toggle-button">
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+        </div>
     </nav>
 
     <!-- <header class="header" id=top>
@@ -33,5 +38,14 @@
         </div>
     </header> -->
 </body>
+
+<script>
+    const toggleButton = document.getElementById('toggle-button')
+    const naviList = document.getElementById('navi-list')
+
+    toggleButton.addEventListener('click', () => {
+        naviList.classList.toggle('active');
+    })
+</script>
 
 </html>
