--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
         </div>
     </nav>
 
-    <!-- <header class="header" id=top>
+    <header class="header" id=top>
+        <!-- <img src="/imgs/casey-horner-mPnxwQBtUZE-unsplash.jpg" alt="dramatic sky" class="title-img"> -->
         <div class="intro">
             <h1 class="intro__heading">Interstellar Software</h1>
             <h2 class="intro__subheading">For Only $99 Space Dollars!</h2>
-            <i class="fa-solid fa-shuttle-space"></i>
-            <i class="fa-solid fa-angles-down"></i>
+            <div class="intro__icon-div">
+                <i class="fa-solid fa-angles-down intro__icon" id="arrow"></i>
+                <i class="fa-solid fa-shuttle-space intro__icon" id="shuttle"></i>
+            </div>
         </div>
-    </header> -->
+    </header>
 </body>
 
 <script>
