--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav id="mainNavbar" class="navbar">
+    <nav id="mainNavbar" class="navbar" id="navbar">
         <div class="div-logo">
             <a href="#" class="logo">Robert Phillips</a>
         </div>
@@ -30,7 +30,6 @@
     </nav>
 
     <header class="header" id=top>
-        <!-- <img src="/imgs/casey-horner-mPnxwQBtUZE-unsplash.jpg" alt="dramatic sky" class="title-img"> -->
         <div class="intro">
             <h1 class="intro__heading">Interstellar Software</h1>
             <h2 class="intro__subheading">For Only $99 Space Dollars!</h2>
@@ -49,6 +48,16 @@
     toggleButton.addEventListener('click', () => {
         naviList.classList.toggle('active');
     })
+
+    const navbar = document.querySelector('.navbar');
+window.onscroll = () => {
+    if (window.scrollY > 100) {
+        navbar.classList.add('nav-active');
+    } else {
+        navbar.classList.remove('nav-active');
+    }
+};
+
 </script>
 
 </html>
