--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <header class="header" id=top>
         <div class="intro">
-            <h1 class="intro__heading">Interstellar Software</h1>
+            <h1 class="intro__heading heading">Interstellar Software</h1>
             <h2 class="intro__subheading">For Only $99 Space Dollars!</h2>
             <div class="intro__icon-div">
                 <i class="fa-solid fa-angles-down intro__icon" id="arrow"></i>
@@ -39,6 +39,64 @@
             </div>
         </div>
     </header>
+    <section class="about">
+        <div class="about__title-con" id="about">
+            <h1 class="about__heading heading">About</h1>
+            <div class="about__img-div img-div">
+
+            </div>
+        </div>
+        <div class="about__text-container text-container">
+            <p class="text-container__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem enim nam modi fugit sunt rerum,
+                voluptatibus libero quas officia laudantium iste quam dolorum quasi quo incidunt explicabo praesentium
+                quod non!
+            </p>
+            <div class="about__icon-div">
+                <i class="fa-solid fa-code icon"></i>
+                <i class="fa-brands fa-css3-alt icon"></i>
+                <i class="fa-brands fa-js icon"></i>
+                <i class="fa-brands fa-sass icon"></i>
+                <i class="fa-brands fa-bootstrap icon"></i>
+                <i class="fa-brands fa-python icon"></i>
+                <i class="fa-brands fa-react icon"></i>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0296A5" fill-opacity="1"
+                d="M0,32L48,69.3C96,107,192,181,288,181.3C384,181,480,107,576,69.3C672,32,768,32,864,80C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+        <h1 class="projects__heading heading" id="projects">Projects</h1>
+        <div class="project-card">
+            <div class="project-card__img-div img-div">
+
+            </div>
+            <h2 class="project-card__heading">Shuttle X</h2>
+            <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+                beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
+                nisi in eos non.</p>
+        </div>
+        <div class="project-card">
+            <div class="project-card__img-div img-div">
+            </div>
+            <h2 class="project-card__heading">Planet Y</h2>
+            <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+                beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
+                nisi in eos non.</p>
+        </div>
+        <div class="project-card">
+            <div class="project-card__img-div img-div">
+
+            </div>
+            <h2 class="project-card__heading">Enigma Z</h2>
+            <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+                beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
+                nisi in eos non.</p>
+        </div>
+    </section>
 </body>
 
 <script>
@@ -50,13 +108,13 @@
     })
 
     const navbar = document.querySelector('.navbar');
-window.onscroll = () => {
-    if (window.scrollY > 100) {
-        navbar.classList.add('nav-active');
-    } else {
-        navbar.classList.remove('nav-active');
-    }
-};
+    window.onscroll = () => {
+        if (window.scrollY > 100) {
+            navbar.classList.add('nav-active');
+        } else {
+            navbar.classList.remove('nav-active');
+        }
+    };
 
 </script>
 
