--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </div>
         </div>
     </section>
-    <section class="projects">
-        <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0296A5" fill-opacity="1"
-                d="M0,32L48,69.3C96,107,192,181,288,181.3C384,181,480,107,576,69.3C672,32,768,32,864,80C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-            </path>
-        </svg>
-        <h1 class="projects__heading heading" id="projects">Projects</h1>
+    <svg class="wave-blue" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#014d64" fill-opacity="1"
+            d="M0,96L80,90.7C160,85,320,75,480,96C640,117,800,171,960,176C1120,181,1280,139,1360,117.3L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
+        </path>
+    </svg>
+    <section class="projects" id="projects">
+        <h1 class="projects__heading heading">Projects</h1>
         <div class="project-card">
             <div class="project-card__img-div img-div">
 
@@ -87,6 +87,11 @@
                 beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
                 nisi in eos non.</p>
         </div>
+        <svg class="wave-green" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0A4F57" fill-opacity="1"
+                d="M0,160L80,138.7C160,117,320,75,480,85.3C640,96,800,160,960,170.7C1120,181,1280,139,1360,117.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+            </path>
+        </svg>
         <div class="project-card">
             <div class="project-card__img-div img-div">
 
@@ -97,6 +102,14 @@
                 nisi in eos non.</p>
         </div>
     </section>
+    <footer class="footer" id="contact">
+        <div class="footer__icon-div">
+            <i class="fa-brands fa-linkedin footer__icon"></i>
+            <i class="fa-brands fa-github footer__icon"></i>
+            <i class="fa-solid fa-paper-plane footer__icon"></i>
+        </div>
+        <p class="footer__text">Copyright &copy; 2022 | Robert Phillips</p>
+    </footer>
 </body>
 
 <script>
