--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>Robert Phillips</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0652b226de.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav id="mainNavbar" class="navbar" id="navbar">
-        <div class="div-logo">
-            <a href="#" class="logo">Robert Phillips</a>
+        <div class="navbar__div-logo">
+            <a href="#" class="navbar__logo">Robert Phillips</a>
         </div>
-        <ul class="navList" id="navi-list">
-            <li class="listItem"><a href="#about">About</a></li>
-            <li class="listItem"><a href="#projects">Projects</a></li>
-            <li class="listItem"><a href="#contact">Contact</a></li>
+        <ul class="navbar__navList" id="navi-list">
+            <li class="navbar__listItem"><a href="#about">About</a></li>
+            <li class="navbar__listItem"><a href="#projects">Projects</a></li>
+            <li class="navbar__listItem"><a href="#contact">Contact</a></li>
         </ul>
-        <div class="menu" id="toggle-button">
+        <div class="navbar__menu" id="toggle-button">
             <div class="menu-line"></div>
             <div class="menu-line"></div>
             <div class="menu-line"></div>
@@ -31,7 +31,7 @@
 
     <header class="header" id=top>
         <div class="intro">
-            <h1 class="intro__heading heading">Interstellar Software</h1>
+            <h1 class="intro__heading">Interstellar Software</h1>
             <h2 class="intro__subheading">For Only $99 Space Dollars!</h2>
             <div class="intro__icon-div">
                 <i class="fa-solid fa-angles-down intro__icon" id="arrow"></i>
@@ -43,7 +43,8 @@
         <div class="about__title-con" id="about">
             <h1 class="about__heading heading">About</h1>
             <div class="about__img-div img-div">
-                <img class="img-circ" src="./imgs/marcel-strauss-pXcfR2sluwY-unsplash.jpg" alt="portrait of Robert Phillips">
+                <img class="img-circ" src="./imgs/marcel-strauss-pXcfR2sluwY-unsplash.jpg"
+                    alt="portrait of Robert Phillips">
             </div>
         </div>
         <div class="about__text-container text-container">
@@ -53,13 +54,13 @@
                 quod non!
             </p>
             <div class="about__icon-div">
-                <i class="fa-solid fa-code icon"></i>
-                <i class="fa-brands fa-css3-alt icon"></i>
-                <i class="fa-brands fa-js icon"></i>
-                <i class="fa-brands fa-sass icon"></i>
-                <i class="fa-brands fa-bootstrap icon"></i>
-                <i class="fa-brands fa-python icon"></i>
-                <i class="fa-brands fa-react icon"></i>
+                <i class="fa-solid fa-code about__icon"></i>
+                <i class="fa-brands fa-css3-alt about__icon"></i>
+                <i class="fa-brands fa-js about__icon"></i>
+                <i class="fa-brands fa-sass about__icon"></i>
+                <i class="fa-brands fa-bootstrap about__icon"></i>
+                <i class="fa-brands fa-python about__icon"></i>
+                <i class="fa-brands fa-react about__icon"></i>
             </div>
         </div>
     </section>
@@ -116,7 +117,7 @@
 <script>
     const toggleButton = document.getElementById('toggle-button')
     const naviList = document.getElementById('navi-list')
-    const navItem = document.querySelectorAll('.listItem')
+    const navItem = document.querySelectorAll('.navbar__listItem')
 
     toggleButton.addEventListener('click', () => {
         naviList.classList.toggle('active');
@@ -133,7 +134,7 @@
 
     const navbar = document.querySelector('.navbar');
     window.onscroll = () => {
-        if (window.scrollY > 100) {
+        if (window.scrollY > 50) {
             navbar.classList.add('nav-active');
         } else {
             navbar.classList.remove('nav-active');
