Tablet responsiveness completed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     alt="portrait of Robert Phillips">
             </div>
         </div>
-        <div class="about__text-container text-container">
+        <div class="about__text-container">
             <p class="text-container__text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem enim nam modi fugit sunt rerum,
                 voluptatibus libero quas officia laudantium iste quam dolorum quasi quo incidunt explicabo praesentium
