Completed Desktop version of website.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="about__text-container">
-            <p class="text-container__text">
+            <p class="about__text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem enim nam modi fugit sunt rerum,
                 voluptatibus libero quas officia laudantium iste quam dolorum quasi quo incidunt explicabo praesentium
                 quod non!
@@ -75,19 +75,25 @@
             <div class="project-card__img-div img-div">
                 <img src="./imgs/ivan-diaz-YOy-ek-aBR0-unsplash.jpg" alt="picture of a rocket" class="img-circ">
             </div>
-            <h2 class="project-card__heading">Shuttle X</h2>
-            <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
-                beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
-                nisi in eos non.</p>
+            <div class="project-card__container">
+                <h2 class="project-card__heading">Shuttle X</h2>
+                <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+                    beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid
+                    vel
+                    nisi in eos non. lorem</p>
+            </div>
         </div>
         <div class="project-card">
             <div class="project-card__img-div img-div">
                 <img src="./imgs/nasa-rTZW4f02zY8-unsplash.jpg" alt="picture of a planet" class="img-circ">
             </div>
-            <h2 class="project-card__heading">Planet Y</h2>
-            <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
-                beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
-                nisi in eos non.</p>
+            <div class="project-card__container">
+                <h2 class="project-card__heading">Planet Y</h2>
+                <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+                    beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid
+                    vel
+                    nisi in eos non.</p>
+            </div>
         </div>
         <svg class="wave-green" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#0A4F57" fill-opacity="1"
@@ -98,10 +104,13 @@
             <div class="project-card__img-div img-div">
                 <img src="./imgs/uninteneded-concept-52FZ4cO78Ns-unsplash.jpg" alt="picture of a UFO" class="img-circ">
             </div>
-            <h2 class="project-card__heading">Enigma Z</h2>
-            <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
-                beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid vel
-                nisi in eos non.</p>
+            <div class="project-card__container">
+                <h2 class="project-card__heading">Enigma Z</h2>
+                <p class="project-card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
+                    beatae autem, id ut illo quis repellendus, at quas error odio, blanditiis placeat asperiores aliquid
+                    vel
+                    nisi in eos non.</p>
+            </div>
         </div>
     </section>
     <footer class="footer" id="contact">
