--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     </section>
     <footer class="footer" id="contact">
         <div class="footer__icon-div">
-            <i class="fa-brands fa-linkedin footer__icon"></i>
-            <i class="fa-brands fa-github footer__icon"></i>
-            <i class="fa-solid fa-paper-plane footer__icon"></i>
+            <a href="#"><i class="fa-brands fa-linkedin footer__icon"></i></a>
+            <a href="https://github.com/romanee-conti"><i class="fa-brands fa-github footer__icon"></i></a>
+            <a href="mailto:robert_phillips17@outlook.com"><i class="fa-solid fa-paper-plane footer__icon"></i></a>
         </div>
         <p class="footer__text">Copyright &copy; 2022 | Robert Phillips</p>
     </footer>
