--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
     </section>
-    <svg class="wave-blue" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#014d64" fill-opacity="1"
             d="M0,96L80,90.7C160,85,320,75,480,96C640,117,800,171,960,176C1120,181,1280,139,1360,117.3L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
         </path>
@@ -95,7 +95,7 @@
                     nisi in eos non.</p>
             </div>
         </div>
-        <svg class="wave-green" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#0A4F57" fill-opacity="1"
                 d="M0,160L80,138.7C160,117,320,75,480,85.3C640,96,800,160,960,170.7C1120,181,1280,139,1360,117.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
             </path>
@@ -115,9 +115,9 @@
     </section>
     <footer class="footer" id="contact">
         <div class="footer__icon-div">
-            <a href="#"><i class="fa-brands fa-linkedin footer__icon"></i></a>
-            <a href="https://github.com/romanee-conti"><i class="fa-brands fa-github footer__icon"></i></a>
-            <a href="mailto:robert_phillips17@outlook.com"><i class="fa-solid fa-paper-plane footer__icon"></i></a>
+            <a href="#" class="footer__link"><i class="fa-brands fa-linkedin footer__icon"></i></a>
+            <a href="https://github.com/romanee-conti" class="footer__link"><i class="fa-brands fa-github footer__icon"></i></a>
+            <a href="mailto:robert_phillips17@outlook.com" class="footer__link"><i class="fa-solid fa-paper-plane footer__icon"></i></a>
         </div>
         <p class="footer__text">Copyright &copy; 2022 | Robert Phillips</p>
     </footer>
